# Pinyiniser

./: .gitignore  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  meta.yaml  pyproject.toml  setup.cfg  setup.py
pinyiniser/: '  __init__.py  add_pinyin.py  hello.txt  main.py
pinyiniser/Pinyiniser.egg-info/: PKG-INFO  SOURCES.txt
pinyiniser/Pinyiniser_matthewdelaney.egg-info/: PKG-INFO  SOURCES.txt
pinyiniser/materials/: cc_cedict_parser.py  cc_cedict_parser_opt.py  numeralise.py  pinyin_skip.py  remove_spaces.py
src/Pinyiniser.egg-info/: PKG-INFO  SOURCES.txt
src/pinyiniser/: __init__.py  add_pinyin.py  main.py
src/pinyiniser/data/: cc_cedict_parser.py  diacritise.py  generate_pinyin_map.py  howto.txt  pinyin_map.py  pinyin_skip.py  remove_spaces.py
