[metadata]
name = Pinyiniser
version = 1.4
author = Matthew Delaney
author_email = mldelaney94@gmail.com
description = Adds pinyin to lists of chinese strings (utf-8 only)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mldelaney94/Pinyiniser
project_urls =
    Bug Tracker = https://github.com/mldelaney94/Pinyiniser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pinyiniser
packages = find:
python_requires = >=3.9

[options.packages.find]
where = pinyiniser
